--- a/hairdresser-app/package.json
+++ b/hairdresser-app/package.json
@@ -20,11 +20,14 @@
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-redux": "^8.1.3"
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-walkthrough-tooltip": "^1.5.0",
+    "react-redux": "^8.1.3",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
