Added .env to gitignore

--- a/hairdresser-app/eas.json
+++ b/hairdresser-app/eas.json
@@ -11,6 +11,9 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "API_URL": "vraminhos.com"
       }
     },
     "production": {}
