Changed environment variables to use Expo prefix

--- a/hairdresser-app/eas.json
+++ b/hairdresser-app/eas.json
@@ -13,7 +13,7 @@
         "buildType": "apk"
       },
       "env": {
-        "API_URL": "vraminhos.com"
+        "EXPO_PUBLIC_API_URL": "vraminhos.com"
       }
     },
     "production": {}
