--- a/hairdresser-app/package.json
+++ b/hairdresser-app/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1302.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
