--- a/hairdresser-app/app.json
+++ b/hairdresser-app/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Hairdresser",
+    "name": "Fisio Desporto",
     "slug": "hairdresser-app",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
