--- a/hairdresser-app/package.json
+++ b/hairdresser-app/package.json
@@ -12,10 +12,11 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.5.1",
+    "axios": "1.6.0",
     "expo": "~49.0.8",
     "expo-notifications": "^0.20.1",
     "expo-secure-store": "~12.3.1",
@@ -23,7 +24,9 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1302.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-popup-menu": "^0.16.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
