--- a/hairdresser-app/package.json
+++ b/hairdresser-app/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1302.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
