--- a/hairdresser-app/package.json
+++ b/hairdresser-app/package.json
@@ -9,30 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "1.6.0",
-    "expo": "~49.0.8",
-    "expo-notifications": "^0.20.1",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.4",
+    "expo-notifications": "~0.27.6",
+    "expo-secure-store": "~12.8.1",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.2",
     "react-native-calendars": "^1.1302.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-walkthrough-tooltip": "^1.5.0",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
