Added client file management

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 hairdresser-backend/node_modules
+hairdresser-backend/files
 hairdresser-app/node_modules
 hairdresser-admin-panel/node_modules
 .idea
