--- a/hairdresser-app/package.json
+++ b/hairdresser-app/package.json
@@ -3,42 +3,49 @@
   "version": "1.0.2",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start -c",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start -c -g",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/react": "~18.2.79",
     "axios": "1.6.0",
-    "expo": "^50.0.4",
-    "expo-notifications": "~0.27.6",
-    "expo-secure-store": "~12.8.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.14",
+    "expo-dev-client": "~4.0.18",
+    "expo-document-picker": "~12.0.2",
+    "expo-image-picker": "~15.0.5",
+    "expo-notifications": "~0.28.9",
+    "expo-secure-store": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.6",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
     "react-native-calendars": "^1.1302.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-dialog": "^9.3.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-walkthrough-tooltip": "^1.5.0",
-    "react-redux": "^8.1.3",
+    "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.1"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
