--- a/hairdresser-app/app.json
+++ b/hairdresser-app/app.json
@@ -16,7 +16,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.inatsuz.hairdresserapp"
+      "bundleIdentifier": "com.inatsuz.hairdresserapp",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
