--- a/hairdresser-backend/package.json
+++ b/hairdresser-backend/package.json
@@ -11,12 +11,12 @@
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
 		"debug": "^4.3.4",
-		"express": "~4.18.2",
+		"express": "5.1.0",
 		"http-errors": "~1.6.3",
 		"jsonwebtoken": "^9.0.2",
+		"mariadb": "^3.4.2",
 		"morgan": "~1.9.1",
 		"multer": "^1.4.5-lts.1",
-		"mysql2": "^3.6.1",
 		"pug": "^3.0.2"
 	}
 }
