--- a/hairdresser-admin-panel/package.json
+++ b/hairdresser-admin-panel/package.json
@@ -29,14 +29,14 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/browser": "^0.34.4",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^22.1.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "vite": "6.3.4",
     "vitest": "^0.34.4",
     "webdriverio": "^8.16.10"
   }
