Added android directory to gitgnore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ hairdresser-backend/node_modules
 hairdresser-backend/files
 hairdresser-backend/ssl
 hairdresser-app/node_modules
+hairdresser-app/android
 hairdresser-admin-panel/node_modules
 .idea
 
