--- a/hairdresser-app/package.json
+++ b/hairdresser-app/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@expo/react-native-action-sheet": "^4.1.0",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "~14.0.4",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.6",
@@ -23,6 +23,7 @@
     "expo": "^52.0.21",
     "expo-dev-client": "~5.0.6",
     "expo-document-picker": "~13.0.1",
+    "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.3",
     "expo-notifications": "~0.29.11",
     "expo-secure-store": "~14.0.0",
@@ -30,7 +31,7 @@
     "expo-system-ui": "~4.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-calendars": "^1.1307.0",
     "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -38,7 +39,7 @@
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "~0.19.13",
