--- a/hairdresser-backend/package.json
+++ b/hairdresser-backend/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"compression": "^1.8.1",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
 		"debug": "^4.3.4",
