--- a/hairdresser-app/package.json
+++ b/hairdresser-app/package.json
@@ -32,7 +32,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-calendars": "^1.1307.0",
+    "react-native-calendars": "^1.1313.0",
     "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
@@ -43,7 +43,8 @@
     "react-native-select-dropdown": "^3.4.0",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "~0.19.13",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "expo-localization": "~16.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
